@@ -77,7 +77,7 @@ class TestMissing(TestCaseWithTransport):
         lines2 = self.run_bzr('missing ../b --mine-only', retcode=1)[0]
         lines2 = lines2.splitlines()
         self.assertEqual(lines, lines2)
-        lines3 = self.run_bzr('missing ../b --theirs-only', retcode=1)[0]
+        lines3 = self.run_bzr('missing ../b --theirs-only', retcode=0)[0]
         lines3 = lines3.splitlines()
         self.assertEqual(0, len(lines3))
 
@@ -89,9 +89,8 @@ class TestMissing(TestCaseWithTransport):
         lines2 = self.run_bzr('missing ../a --theirs-only', retcode=1)[0]
         lines2 = lines2.splitlines()
         self.assertEqual(lines, lines2)
-        lines3 = self.run_bzr('missing ../a --mine-only', retcode=1)[0]
-        lines3 = lines3.splitlines()
-        self.assertEqual(0, len(lines3))
+        lines3 = self.run_bzr('missing ../a --mine-only', retcode=0)[0]
+        self.assertEqualDiff('Local branch is up to date\n', lines3)
         lines4 = self.run_bzr('missing ../a --short', retcode=1)[0]
         lines4 = lines4.splitlines()
         self.assertEqual(4, len(lines4))
@@ -109,9 +108,22 @@ class TestMissing(TestCaseWithTransport):
         self.assertEqual("modified:", lines8[-2])
         self.assertEqual("  a", lines8[-1])
 
+        os.chdir('../a')
+        self.assertEqualDiff('Remote branch is up to date.\n',
+                             self.run_bzr('missing ../b --theirs-only')[0])
+
         # after a pull we're back on track
         b_tree.pull(a_branch)
-        self.assertEqual("Branches are up to date.\n", self.run_bzr('missing ../a')[0])
+        self.assertEqualDiff("Branches are up to date.\n",
+                             self.run_bzr('missing ../b')[0])
+        os.chdir('../b')
+        self.assertEqualDiff('Branches are up to date.\n',
+                             self.run_bzr('missing ../a')[0])
+        # If you supply mine or theirs you only know one side is up to date
+        self.assertEqualDiff('Local branch is up to date.\n',
+                             self.run_bzr('missing ../a --mine-only')[0])
+        self.assertEqualDiff('Remote branch is up to date.\n',
+                             self.run_bzr('missing ../a --theirs-only')[0])
 
     def test_missing_check_last_location(self):
         # check that last location shown as filepath not file URL
